dist/media/Ingress.bindery.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: media
  name: bindery
  namespace: media
spec:
  rules:
    - host: bindery.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: bindery
                port:
                  number: 8787
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bindery.cmdcentral.xyz
      secretName: media-tls
